# ChangeLog for dev-python/sphinx-bootstrap-theme
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx-bootstrap-theme/ChangeLog,v 1.5 2014/12/16 07:21:56 idella4 Exp $

*sphinx-bootstrap-theme-0.4.5 (16 Dec 2014)

  16 Dec 2014; Ian Delaney <idella4@gentoo.org>
  +sphinx-bootstrap-theme-0.4.5.ebuild, -sphinx-bootstrap-theme-0.3.9.ebuild,
  -sphinx-bootstrap-theme-0.4.0.ebuild, -sphinx-bootstrap-theme-0.4.2.ebuild:
  bump; add pypy3

*sphinx-bootstrap-theme-0.4.2 (16 Oct 2014)

  16 Oct 2014; Ian Delaney <idella4@gentoo.org>
  +sphinx-bootstrap-theme-0.4.2.ebuild:
  bump; add pypy

  14 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  sphinx-bootstrap-theme-0.3.9.ebuild, sphinx-bootstrap-theme-0.4.0.ebuild:
  Keyword ~ppc and ~ppc64, bug #481462

*sphinx-bootstrap-theme-0.4.0 (17 Mar 2014)

  17 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
  +sphinx-bootstrap-theme-0.4.0.ebuild:
  Version bump

*sphinx-bootstrap-theme-0.3.9 (25 Feb 2014)

  25 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +sphinx-bootstrap-theme-0.3.9.ebuild:
  Initial import