@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST sphinx-bootstrap-theme-0.4.5.tar.gz 1015290 SHA256 f36d32aeeb4d08a1b281e745db4228b5e40ddacf7928a68e26b7f909fa391d85 SHA512 e5696b8fa41d63ce97ee45c622a10bfd812b4179596024895ec2c76a3c79dbc6d7117043b001bb8caeada204052757cfc83815cfc7f1f7f7506a9c0ef4ac7c2d WHIRLPOOL edbe912150a7dbb0f797c742af24e5f9a85b1b4e568925a2d8a123abd8f42f016f32dfa828ddd1200e4b3d2aa49f6773976ee3fa40c45de982df969fa2e5f0c9
-EBUILD sphinx-bootstrap-theme-0.4.5.ebuild 682 SHA256 50851d2cb0fa33c71706cb0b8075454af1b6821152843f6e3a9b9262e49ef7a4 SHA512 a6b9e35a902db4f8a18e58473f76f89c85a3d148bcbffbc59803a6599176b21161d8fb1833e845463258539eeee1fb0316b70446e98d3d63899292b4231ea56b WHIRLPOOL 416d818abf9c7a48a66df0d3176913812cf7eab410e99e404982f618c6dd373ed934a8483cb439babda5df06b04426595cc0707ad2bfa893d6bc1c71deb7178c
-MISC ChangeLog 1158 SHA256 be05d259c741a0cbb10c4227ed31a68dfcc72da3b228d0a4a73ff54520381519 SHA512 19ff46430d5de1dd17c31b4ee339aa6864c47cdf63333c45956f3478874ca1fd45a0b8c723f49ff2bb9b77ac53b68d2a369d41c689800fa71b6639f197e17add WHIRLPOOL 789bec715011d66fc24d965399acd88522131e84d8870d2e42f688d3b2a8525f59d8d4c19ff73018c886025ee130f532042a98c951fb6b0d2ddfecf32b8343be
+EBUILD sphinx-bootstrap-theme-0.4.5.ebuild 678 SHA256 93ed304bd502ebcdc1adeaf7b41e11e6ae9c434cfc06deb09d0471331af8014f SHA512 b2c7bfecf1b23a3ca52888437a289cdc9ba2b4ba54a75f29986c04de8d16eedb6ee518acbcc632b5afb606a977fc528da738c9a51aba3ed978c5e2066035893e WHIRLPOOL 5cc5dfabea28a8ac6680bc319915d5c143ca07d56ff53704d12861a7b026ecbebdcdd0d8b730fbf85393711bcdf60aab98cb7d17ed7369d32cc3bd02528ea7f1
+MISC ChangeLog 1274 SHA256 d45d8ad82d782a2a3e89067800e1fc9c097b99ca81a1c5b8607072c6ca44f352 SHA512 50118818d403bf13336d6fc09ee601530a752522d22ede577a780a068331ee44e5470c30b119a8ea166753d4aaa529d230d30630cf42c66f52ff207f8beaeee2 WHIRLPOOL d93251d94ec2d322cf5ed1cbbea924870b03ff9b7e854d8e7951471e899ff8e05ad19473300617f7774fc55b0d88e6cc8c04c9fe5ba2d931b885da9151e5c50c
 MISC metadata.xml 242 SHA256 6a2d74c166fa651e21966a4d3b8a49d401171a2d0dcc92ee807dccb83495ac70 SHA512 5a3c53fef8377d08dd1663d44d018bba4daa00026ffd4a6f025aedac6b3b35b5ed05f4a9b09a5cfd1bb5e0f1a834bc9990182ec414e78a76a0aa9e692f782d65 WHIRLPOOL 6d80dd069ff191856f0fd7e8f8af8cc7fd700cc880491fddde877dd7a28945dd2703d42e2b4a4826c5d8d6ac6b947a3530597fbeeece93fadf53e58f5363420e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSP3aIACgkQso7CE7gHKw2cjQCfdXHzwMeGSYVWjhRlUVASa+6p
-IgkAn25HCybz3kpwbnXU08ELMLtejavv
-=N5aC
+iEYEAREIAAYFAlThyQIACgkQCaWpQKGI+9RjhQCggUPZwQbpy5GIFRE+fB6dF0eR
+AHcAn0e/nJxj/WCgbCuUtChBaEONP0gb
+=RDzM
 -----END PGP SIGNATURE-----
