@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST youtube-dl-2014.11.02.1.tar.gz 1123292 SHA256 2e4ee5cc168eb56f778beec48809aa18068c22f8bbaa1911f5b69cf51edb609e SHA512 0a21d216c36642a079e837440d05338970abd30352564a41267ddb33ff4afd866a28aa678c7186b2a0dd4a11e8ec1e36b55bdf1307b3f23b9f2d3422d8ab9fbd WHIRLPOOL 6bbd185c60371ef553899a2838950fcefa849c76b8ec70d18106e38f9be3ec0bc28c799bd3de3d4ad6a0956699ed6613706b7b4205fcddef1f0ec4bc7c9772a7
-DIST youtube-dl-2015.02.10.5.tar.gz 1350958 SHA256 cd383f83b972afccf57b97c096d4830067199aedf4e2f0809004a2ead8676f38 SHA512 b46695a232f5cf05e923c799c683481e71230c8047d5de6ba72de52d6a790344496325d72a515e6a99b73d3a2ffa8dff8fd838905757b730db4dfbc52a7eed39 WHIRLPOOL 647598c1bc509b7fd077471ffd5acd8eb855e32dd7c30c25ca607b5dee255ad7898e4b9cea587dccf9b7d00bc1e0f08504f58ef43d4e22b7825fd04d7d80ae7e
 DIST youtube-dl-2015.02.11.tar.gz 1351632 SHA256 1ad5e8ec6b59dbcb9fafcf312b8e3f2a985a3f8ef7109172caaf287118bb3c59 SHA512 c441fc5e45e832450db62dd5a34c23508c0355b140d578b4fc3cb9c733405f9dd4de5ff7d8d93571590e296b43555da5ff6dfdc0ef992f7201c69b6f2159d8b3 WHIRLPOOL f7930d53c654fa305ffce78510c7c9edb8f76daedbb7cfbb02424430bb8b363cdc517046f926b2baa48dec1c12a3736704778a03fd94cccfd5aff6979106b43d
+DIST youtube-dl-2015.02.16.tar.gz 1363068 SHA256 1dab1a3184197ee2e1c3ce0a06fd6aae3af06dd6e42f6f3e2eb3acb457106350 SHA512 5cdd18600d9d93c5ee89aad6697cb64ebdc33fc9ac82d0d9a6e68f859c593bf55cce3f3b7567f2370ca5ae6e1ead1d97c0241e2ceb7558e66646cb6f4dbb820c WHIRLPOOL e152b9aefc5a3ecd459c3d1fb0f4d4aa783fd5f8f8ba97b9223a9c9247fbe84cd2a7def439fffafe1a7fd85df7bc4eb5437fcd6c9c34fb1363ddd672c1a869f6
 EBUILD youtube-dl-2014.11.02.1.ebuild 1683 SHA256 05cdd128d0e7fe3c6d3d7c478a26c9bf0d115cda96d56ad5c60ea591002d1091 SHA512 1c81ade34e1165c43f545def40a397dacab353d7d7aed2643358ac7edd8bd515abd36fda5ca917f0d0b801d644dbbf71a3f64b014191c85ab84ab08421b14fe8 WHIRLPOOL 6bfd5803999f6c0265b1a5e336b5acd9b66838037576f9aa5ebbabd5dfac03f9cccb434d3d9c8b4958fd1a4c9026028f185b18ff9d99daeb695cf9203b951bf2
-EBUILD youtube-dl-2015.02.10.5.ebuild 1762 SHA256 a00bc51d5209d0a7ce8967b23476fd6e0215566e8c5dd635aa78345a8c15fd9f SHA512 95f168b7cc3716ac888d1f9d44eae9c29262d715e18fd08b0a7650495c4219ccaf718643b8a6ad883b59b5241ded575aad2545fc998f930291c01db55747f4fd WHIRLPOOL 693b2a45124fa05c743a3b4da478c24426349bcad543bce782c393d94e201abf210a5f6b2329e2e44ce1be827a9f87eb5654614b3abab98ddfb738e49b401def
 EBUILD youtube-dl-2015.02.11.ebuild 1760 SHA256 6b9977869e5f6aa187a838fd36a6da1ea332b33a9381d545f7c49faeba3c4a28 SHA512 cf49796bdae1914a079b6f30578b3552318d19fa3cae725d236f52a91a4c8f32358e76fa5c0e837c3a8623304d7e2067dd472f835242a43e1e6cdd2201408e84 WHIRLPOOL 79bd2c2bfa0d23d9cd63b7c7ff4abb8adcaede144eea34930b8c89c7ea55e4a214d5b4d54ad5c6f8864dc838c2fbf0798ada1e78f1e913ebdf18b28ed33de8e1
-MISC ChangeLog 69080 SHA256 530e53198b100b21dfc603c4455f45b6a428fea158aa221602077d451d3c4091 SHA512 80426f1a55628816ab2b5d45e3404cf7269e0d2baf59fab762307cbe90b7dd8605ff53b55e6b80f26e1c2261c79d0a893cc26347a54a47b387a189106e13c411 WHIRLPOOL d459cbc7a0fedae443446ebccad720d1357ad44fecd49d69029daf471a118f640aded29eefe038c4e6a84eac0e72323bbcfa263f3c51eeb159a5e7ebf8d74695
+EBUILD youtube-dl-2015.02.16.ebuild 1760 SHA256 dcf6a96f2e2ae7e0e8c386fc751314cc8022c88be9e04432ebb6237ccb845305 SHA512 7fbadf83379ff49f1765689374b35bcbc1e8e6eadcd3d0450f4e8ce0c877ba3100e65c7dfdd2980f43a622533b6e1d7982c8f6d9ec0291a4c83f21cc7a165ab2 WHIRLPOOL 3c34c595fba20f4d598b2b3e70a813114b5091622515f54a0d1f78a6c9bdf5f25bdbb00e74b04dfb89cdfc5fc177329db680730be4b7338201e28a5583253566
+MISC ChangeLog 69248 SHA256 5e95496b32f58d14c28b0c8557b9d49e6806cd4e7b04de1b60803c12fa88a6ae SHA512 0e0aa31385dc944361bd10e908f5b3cb44ed67268319888992351728c465c513ab63ac8fa0bc37efa2a8ee6b844cbd6afe0d9dbf51d56e21e13468b3d1a680d9 WHIRLPOOL 692baf98f776c63d431e3817d4c5f8f68a0ddd4c1b8d9ecfcf73b695d20032f64e852b410b9567f6fb279eb02efc93ad15a7aa9ed96481de82f665659e067a78
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTcftsACgkQVWmRsqeSphMvzQCfc7BV8g7K1wCrDpnoX87yD5sk
-xEUAnRHeOaPlTyAEX+iB/RdwceMEw2m9
-=nNlA
+iEYEAREIAAYFAlThzOsACgkQVWmRsqeSphOcEQCdG9aGnW96oU48KB46YsfqWPfV
+iIUAnimlheqUEhs0B5as9d9KdcIhFGNB
+=TfJj
 -----END PGP SIGNATURE-----
