@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2015.02.10.5.ebuild,v 1.1 2015/02/11 07:34:05 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2015.02.16.ebuild,v 1.1 2015/02/16 10:56:42 jer Exp $
 
 EAPI=5
 
