@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX scipy-0.12.0-blitz.patch 731 SHA256 4f487a746aa62a39cdab9381dd4191cef0ccb912ed2e22065a7de02b85c8a269 SHA512 a788d08d34e13b02a0ec8127fd7918786cd26376ef5160f4acde585c6c1ac018a39652d9174b5e31173aa5c4e0c2f63101549de70806ea7ac56731abe3cb929c WHIRLPOOL ec00c2778e5e31a5d0ec4bc8099b4579e4eaa34a335653155da3c47e3c69fb3a8ff67b816cbeb769b81826c27ca687fc9fc22db11b91ddfadb6268c98890b302
 AUX scipy-0.12.0-cephes-missing-include.patch 394 SHA256 0263ba4e9f13c7be0e7160ae73ce98ea37f698ea7e06c3fc090bc4ff7732bc66 SHA512 a4f9adf9b29743b6ca7f42de0695af23ddf7791330a4a58a2f47cd5599af1361aee3b141a016ea1a81a3bc5b8bfcaa3f0478370a09acd37bcd8e519765701510 WHIRLPOOL 59651015bf540ad2218dd65764d68fb5f2b907116245e3e83d14084579314af6c58c34be3f74300166c2450e00833fa4ae6d6de057392d3e947a979555add1bc
@@ -17,26 +17,14 @@ DIST scipy-0.14.0.tar.gz 10212944 SHA256 4b41a3e6bf178df1c7f0ef3bfeabf1f56610329
 EBUILD scipy-0.12.1.ebuild 3805 SHA256 5c4e8b9f496e9f96279b3ba8649c7f66d251e77c86017cf102247f6e2895d2d6 SHA512 972cad2341914448941c31fc616a2b1b64ff79ef3f8fd79d7385b52953c5a44c5b8a1ea319a97a07cbac550e2b5f50968bd80153e16cac0fe2d48142b74eed44 WHIRLPOOL 314685828ae74424acc7669523df53c2678381e7e578d65f628759f1e21aab2f5a62b6bd428592285e1fe041407603854f829d90d3e209a71d7573b11ec7a384
 EBUILD scipy-0.13.2.ebuild 3827 SHA256 2345269991f640d9e859e591e5a5cb338f965b8f44d943f0a545a71324591597 SHA512 5519c7164ffc193d15754162f73fb14d17ec77be1b802e743bd3bd1773e6831285fa92f8918b29be0d9edca6f057264192fe287dc1f910723ffa3f7f21f21060 WHIRLPOOL 48fc7a3a54099816feca539b59cb6267ea59315cc369d6f581b926d34af868b87eeee06f2f783ea4d5d3914473af4d80227d00225f6fd424faffe67f48034483
 EBUILD scipy-0.13.3.ebuild 3914 SHA256 de5293fe8fbbea55dc550af0671aaa93643ec1f051c687d6fdf6168ff06f7516 SHA512 862a5ecaaee18145166cff58bf3865deaabed865e52a6f89750fcfc36a975459ada1824ca6e41676a42b014855aaca5eb3c79a2a9f6d2572cc4f2650febc3ea5 WHIRLPOOL 668b1fb8f9567e5c08c6f6b6dec622876f8ea323f0380370e75c089b4bb462689cee26ff9c187112dbd41afd7f708f3593716858e4a686aed35483fe2b93feb6
-EBUILD scipy-0.14.0-r1.ebuild 3978 SHA256 d4114404359f466a000b0d8cee80ea8f94591dc5302cd81fd952da81c13b5335 SHA512 a61775e3885655be71a370d56c443947139b106af7a6bda3107983afab7161b0d87bccc5bfb75616ddc033c8f997101f0666bfc254ab1f3c425355475d97a425 WHIRLPOOL 7a74309dac105722a1a7123be5702455e1c2618e49735f11151761934918717422198fd457fdd15f3f51731c007e44ed60069d3c312cdacb7bd6af0ed94186c0
+EBUILD scipy-0.14.0-r1.ebuild 3975 SHA256 6ca3a4e3dcb128b3d89825e0614916b1b63b406facafbeeac1b89e17288137a8 SHA512 8a10bfda4cd44a9b992aeb9d5f910e4141125b9d5496ee54a00a3f204f48e23cd79526d375db3ddbbb6849ddd95b1c61e5f65432252ad6bb0ad240067f41dba2 WHIRLPOOL ae94eac8ec5de0e248378a0cf9ab3fa7d82652083c88fb1e09f6f4f4a3f391789522a60619e673bb38de70a0437baf6584ab9f75563e5927d72615240c376ead
 EBUILD scipy-0.14.0.ebuild 3927 SHA256 74f646d70b5be2f62d66637c29a7ec01352e1e9d97b0003c1b982a0ef5e7a14c SHA512 27ee56f813a0abdbe1ca0da8fedeb69622aa063aaaff8bbc383f86b312b294df7742df16a0c3fc0c08cbf84859f9232045e08585456ec5d5e43d0ccba8c2edd1 WHIRLPOOL acabd0ae31e1063fe3e2d80590218ce320d9ba3c96b603145702bcb563d373b721963610b09fbb9d0049c5ffa9cda76ab4302097d6a1b3de04503f28cfc3e5fe
-MISC ChangeLog 21419 SHA256 c4fa0c0d11cdd0abff5eaa7902a55a0d061a5689357e481543a9edfd182dad18 SHA512 7d562d4fbdc889a64318ebfdd444d3e4dc34758d2b13b9769b0ee729843a7cd3260ca2ca3b14538aa0d71d4546aa8be727bb41ed6e6713e782095e78888f3f6b WHIRLPOOL 0ed81bb7f186d54cde289e4adb8230c7aa9e08689d615f58a278c799ea37087bc3d5019880e6d8381532205ebbf6647af502963930f9f86d1b1a0a875e8a2c78
+MISC ChangeLog 21533 SHA256 2f6331b988bd217f4076e1e574c754fec25ca3b875c45e15f571ea58092a32bb SHA512 078ea53b525abc1b7351f3e914fed0c280e8fa2f3be8a27c8f04c5cde7df6abe190929a6bb938fdd21f5cd0e4b3194e057573ffc006511e24a66bb86d1f27903 WHIRLPOOL ae24317d4266f8f8d6bc084937cec5fdc0bc302c181e84e88a6ac1af7a3227448c93406965e55b18f8c236eb46e347b64039ecf01f857bfb5770589fd706dcdc
 MISC metadata.xml 778 SHA256 c585563656be41d539826dbd6ac5f633a0704b73a39b3603b50ce6092d767e73 SHA512 da239d303a88f7bc4356a27965aed91befd379ee142c529ab5177276eb86ac7976b527a2b1397584754f1cec1c6743c98b9af4a540e6cc503607ac3cf529de06 WHIRLPOOL e04375da88108229b3386ae79ba452705a4d4fcdbff9f38c491a4436846c9037d8c68bd8d5524d5435e351a557bd604211477a28da5661c9cce804fe27a34b2a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJUZmdCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirTncP/0c2T8rKBbD/rtOjwT4bxgEQ
-Ro0qpncvZ893dXsHlJX34NYm95rOHgM3o3Ao/DER7De/mKmhpVwUDPjczU60JL3c
-S6p4vUFa5Yvo3S+sb5cVei2WPW0AaRGw0NGILE+6qNuq+fXceQya8Y/7ddqgZr/5
-3I0Qa4UIyofxnxqtUQnIIIkV2gdDFx6wF6lQFZvNHlgmMXQgmSM5twoqn5RL4gB6
-/oySx+R0xM+pj4jL7f4NK42KP/4hp8BdAaH7S5O0OzmgjttODW20vMczwBuHhwrz
-a94Hj6IELw5XFqysEDbRG97B599iqE/f1iQwWaoqGicg4b5PJ1ruOMwldO2IH4A2
-/7t4UBI7tGXwgWtTLAh7AK+Uj2SRPx68kMf/M41Yg1GKxfNGWfMsD+s5b2RZZTwg
-8C6jK4TkDgmqBHYlPpu8ngT26g6rCU8HOAVXVjc3lCFC+7JtiXk0fRxSf3k3xjaL
-Dg3HGOvk2Bc4QhLVlDs94sDhfJ5MXSfWGAtsWyVPxuHoPfvVJn5CPAnyWvBSGPkf
-bl7B1yh9lxVJXgsug2sjs/JAbF6gMGMPueLNOok374iy6N3fJayQZRl7oOeN78vQ
-DcPKlYVO/Rc2jbSm1HvWtEntlYIUB2NnTaqLFeo+e+WU3U6iiwbHeHvZ0W2EMhyb
-+XZVMvvh5s3jYI8EvSpB
-=P09P
+iEYEAREIAAYFAlThyCsACgkQCaWpQKGI+9TwDQCfURZ4AIZ+ODsAxtg48rcIHmB6
+Bf0An0KZVu8hvhO0f+GuimYZi6Zl6Akk
+=hqHn
 -----END PGP SIGNATURE-----
