@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/scipy
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.118 2014/11/14 20:34:09 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.119 2015/02/16 10:36:25 pacho Exp $
+
+  16 Feb 2015; Pacho Ramos <pacho@gentoo.org> scipy-0.14.0-r1.ebuild:
+  amd64/ppc/ppc64/x86 stable, bug #530708
 
 *scipy-0.14.0-r1 (14 Nov 2014)
 
